<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>reros</name>
  <version>0.1.0</version>
  <description>Prototype ideas that may make rclpy easier to use.</description>

  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>

  <license>Apache License 2.0</license>

  <author email="sloretz@openorobotics.org">Shane Loretz</author>

  <depend>rclpy</depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

